# rust-viewer-pro

./: .gitignore  CHANGELOG.md  Cargo.toml  PERFORMANCE.md  README.md  SECURITY.md  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
assets/: rust-viewer-pro.desktop
benches/: decode.rs
packaging/: build-appimage.sh
packaging/debian/: config  postinst  postrm  templates
packaging/windows/: installer.nsi
src/: app.rs  decode.rs  image_loader.rs  input.rs  lib.rs  main.rs  update.rs
